updated project.clj